# napari-openlabframe

./: README.md  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/napari_openlabframe/: __init__.py  _dock_widget.py  conf.py  motors.py  usb_camera.py  utilities.py
src/napari_openlabframe/_tests/: test_dock_widget.py  test_reader.py
