[metadata]
name = napari-openlabframe
version = 0.0.1
author = Guillaume Gay
author_email = guillaume@damcb.com

license = GPL-3.0-only
description = A napari plugin to control en Open Lab Frame
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-openlabframe = napari_openlabframe
